--- a/templates/create-product.html
+++ b/templates/create-product.html
@@ -28,16 +28,16 @@
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="index.html" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="../templates/index.html" class="d-block">Süskind</a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="product.html">
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/product.html">
                             <i class="fas fa-tshirt mr-2"></i>
                             <p class="m-0">Product</p>
                         </a>
                     </li>
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="member.html">
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/member.html">
                             <i class="fas fa-user-alt mr-1"></i>
                             <p class="m-0">My Page</p>
                         </a>
@@ -50,20 +50,20 @@
                 </ul>
                 <div class="header-mobile d-flex d-lg-none align-items-center">
                     <a class="cart-m position-relative" href="#">
-                        <img src="./../img/icon/shopping-cart.svg" alt="shopping-cart">
+                        <img src="../static/img/icon/shopping-cart.svg" alt="shopping-cart">
                         <p class="cart-mark rounded-circle bg-primary text-white">3</p>
                     </a>
-                    <a class="ham" href="#"><img src="../img/icon/bars.svg" alt="ham"></a>
+                    <a class="ham" href="#"><img src="../static/img/icon/bars.svg" alt="ham"></a>
                 </div>
             </nav>
         </div>
         <div class="container-fluid">
             <ul class="header_menu-m d-block d-lg-none w-100 p-0">
-                <li><a href="product.html" class="d-block text-white px-0 py-3">Product</a></li>
+                <li><a href="../templates/product.html" class="d-block text-white px-0 py-3">Product</a></li>
                 <li><a href="#" class="d-block text-white px-0 py-3">Wishlist</a></li>
                 <li><a href="#" class="d-block text-white px-0 py-3">Blog</a></li>
                 <li><a href="#" class="d-block text-white px-0 py-3">Contact</a></li>
-                <li><a href="member.html" class="d-block text-white px-0 py-3">Mypage</a></li>
+                <li><a href="../templates/member.html" class="d-block text-white px-0 py-3">Mypage</a></li>
             </ul>
         </div>        
     </header>
@@ -83,19 +83,19 @@
                             <div class="form-group row">
                                 <label for="inputName" class="col-4 col-md-3 col-form-label">Name</label>
                                 <div class="col-7 col-md-8">
-                                    <input type="text" class="form-control" id="inputName" placeholder="">
+                                    <input type="text" class="form-control" id="inputName" name="name" placeholder="">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="inputName" class="col-4 col-md-3 col-form-label">Description</label>
                                 <div class="col-7 col-md-8">
-                                    <input type="text" class="form-control" id="inputName" placeholder="">
+                                    <input type="text" class="form-control" id="inputDescription" name="description" placeholder="">
                                 </div>
                             </div>
                             <div class="form-group row">
                                 <label for="selectGender"" class="col-4 col-md-3 col-md-3col-form-label">Ingredient 1</label>
                                 <div class="col-3 col-md-2 col-lg-3">
-                                    <select class="form-control text-dark" id="selectGender">
+                                    <select class="form-control text-dark" id="selectIngredient1" name="ingredient1">
                                         <option>Jasmin</option>
                                         <option>Pink Pepper</option>
                                         <option>Patchouli</option>
@@ -118,7 +118,7 @@
                             <div class="form-group row">
                                 <label for="selectGender"" class="col-4 col-md-3 col-md-3col-form-label">Ingredient 2</label>
                                 <div class="col-3 col-md-2 col-lg-3">
-                                    <select class="form-control text-dark" id="selectGender">
+                                    <select class="form-control text-dark" id="selectIngredient2" name="ingredient2">
                                         <option>Jasmin</option>
                                         <option>Pink Pepper</option>
                                         <option>Patchouli</option>
@@ -141,7 +141,7 @@
                             <div class="form-group row">
                                 <label for="inputName" class="col-4 col-md-3 col-form-label">Prix</label>
                                 <div class="col-7 col-md-8">
-                                    <input type="text" class="form-control" id="inputName" placeholder="">
+                                    <input type="text" class="form-control" id="inputPrice" name="price" placeholder="">
                                 </div>
                             </div>
                             <div class="form-group row">
@@ -152,8 +152,8 @@
                         </form>
                     </div>
                     <div class="col-md-3 col-lg-2 d-none d-lg-block">
-                        <h6 class="mb-4"><a href="create-product.html" class="text-dark border-primary border-bottom">Product Creation</a></h6>
-                        <h6 class="mb-4"><a href="existing-products.html" class="text-dark">Existing Products</a></h6>
+                        <h6 class="mb-4"><a href="create-product" class="text-dark border-primary border-bottom">Product Creation</a></h6>
+                        <h6 class="mb-4"><a href="existing-products" class="text-dark">Existing Products</a></h6>
                     </div>
             </div>
         </div>
