--- a/templates/existing-products.html
+++ b/templates/existing-products.html
@@ -4,127 +4,88 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Süskind - Create Products</title>
-    <link rel="shortcut icon" href="static/img/logo/Süskind-title.png">
+    <link rel="shortcut icon" href="../static/img/logo/Süskind-title.png">
     <meta name='description' content='Create products for perfume shop' />
     <meta property="og:title" content="Süskind" />
     <meta property="og:description" content="Create products for perfume shop">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="Süskind" />
     <meta property="og:image" content="static/img/main-banner.png" />
-    <link href="static/img/logo/Süskind.png" rel="apple-touch-icon" />
+    <link href="../static/img/logo/Süskind.png" rel="apple-touch-icon" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <link rel="stylesheet" href="static/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/static/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/all.js"></script>
+    <link rel="stylesheet" href="../static/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <script src="../static/js/jquery-3.5.1.min.js"></script>
+    <script src="../static/js/all.js"></script>
 </head>
 <body>
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="index.html" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="index" class="d-block">Süskind</a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
-                    <li><a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="product.html"><i class="fas fa-tshirt mr-2"></i><p class="m-0">Product</p></a></li>
-                    <li><a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="member.html"><i class="fas fa-user-alt mr-1"></i><p class="m-0">My Page</p></a></li>
+                    <li><a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/product.html"><i class="fas fa-tshirt mr-2"></i><p class="m-0">Product</p></a></li>
+                    <li><a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/member.html"><i class="fas fa-user-alt mr-1"></i><p class="m-0">My Page</p></a></li>
                     <li><a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="#"><i class="fas fa-shopping-cart mr-2"></i></a></li>
                 </ul>
             </nav>
         </div>
     </header>
     
+    <!--Page Content Start-->
+    <div class="product_category bg-primary d-none d-lg-flex mb-80px">
+        <ul class="d-flex m-0 p-0">
+            <li><a class="d-block text-white p-3 text-center">Welcome back!</a></li>
+        </ul>
+    </div>
     <div class="container mt-5">
         <div class="row">
             <div class="col-md-3 col-lg-2 d-none d-lg-block">
-                <h6 class="mb-4"><a href="create-product.html" class="text-dark">Product Creation</a></h6>
-                <h6 class="mb-4"><a href="existing-products.html" class="text-dark border-primary border-bottom">Existing Products</a></h6>
+                <h6 class="mb-4"><a href="create-product" class="text-dark">Product Creation</a></h6>
+                <h6 class="mb-4"><a href="existing-products" class="text-dark border-primary border-bottom">Existing Products</a></h6>
             </div>
             <div class="col-md-9 col-lg-10">
                 <h3>Create Product</h3>
                 <div class="row">
-                    <!-- Product 1: Ruby -->
-                    <div class="col-12 col-md-4 mb-4">
+                    {% for product in products %}
+                    <div class="col-12 col-md-4 mb-4" id="product-card-{{ product[0] }}">
                         <div class="product-card p-3 border rounded">
-                            <img src="static/img/product/product-1.png" alt="Ruby Perfume" class="img-fluid mb-3">
-                            <h5>Ruby</h5>
-                            <p>Composition: Jasmin, Pink Pepper</p>
-                            <button class="btn btn-danger">Delete</button>
+                            <img src="../static/img/product/product-{{ product[0] }}.png" alt="{{ product[1] }} Perfume" class="img-fluid mb-3">
+                            <h5>{{ product[1] }}</h5>
+                            <p>Composition: {{ product[2] }}, {{ product[3] }}</p>
+                            <p>Price: ${{ product[4] }}</p>
+                            <button class="btn btn-danger" data-id="{{ product[0] }}" onclick="deleteProduct(this)">Delete</button>
                         </div>
                     </div>
-
-                    <!-- Product 2: Sapphire -->
-                    <div class="col-12 col-md-4 mb-4">
-                        <div class="product-card p-3 border rounded">
-                            <img src="static/img/product/product-2.png" alt="Sapphire Perfume" class="img-fluid mb-3">
-                            <h5>Sapphire</h5>
-                            <p>Composition: Patchouli, Vanilla</p>
-                            <button class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-
-                    <!-- Product 3: Emerald -->
-                    <div class="col-12 col-md-4 mb-4">
-                        <div class="product-card p-3 border rounded">
-                            <img src="static/img/product/product-3.png" alt="Emerald Perfume" class="img-fluid mb-3">
-                            <h5>Emerald</h5>
-                            <p>Composition: Lime, Bergamot</p>
-                            <button class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-
-                    <!-- Product 4: Opal -->
-                    <div class="col-12 col-md-4 mb-4">
-                        <div class="product-card p-3 border rounded">
-                            <img src="static/img/product/product-4.png" alt="Opal Perfume" class="img-fluid mb-3">
-                            <h5>Opal</h5>
-                            <p>Composition: White Peach, Magnolia</p>
-                            <button class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-
-                    <!-- Men Products -->
-                    <!-- Earth -->
-                    <div class="col-12 col-md-4 mb-4">
-                        <div class="product-card p-3 border rounded">
-                            <img src="static/img/product/product-5.png" alt="Earth Perfume" class="img-fluid mb-3">
-                            <h5>Earth</h5>
-                            <p>Composition: Leather, Ambergrey</p>
-                            <button class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-
-                    <!-- Fire -->
-                    <div class="col-12 col-md-4 mb-4">
-                        <div class="product-card p-3 border rounded">
-                            <img src="static/img/product/product-6.png" alt="Fire Perfume" class="img-fluid mb-3">
-                            <h5>Fire</h5>
-                            <p>Composition: Black Pepper, Cinnamon</p>
-                            <button class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-
-                    <!-- Air -->
-                    <div class="col-12 col-md-4 mb-4">
-                        <div class="product-card p-3 border rounded">
-                            <img src="static/img/product/product-7.png" alt="Air Perfume" class="img-fluid mb-3">
-                            <h5>Air</h5>
-                            <p>Composition: White Musk, Ginger</p>
-                            <button class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
-
-                    <!-- Water -->
-                    <div class="col-12 col-md-4 mb-4">
-                        <div class="product-card p-3 border rounded">
-                            <img src="static/img/product/product-8.png" alt="Water Perfume" class="img-fluid mb-3">
-                            <h5>Water</h5>
-                            <p>Composition: Spearmint, Cedar</p>
-                            <button class="btn btn-danger">Delete</button>
-                        </div>
-                    </div>
+                    {% endfor %}
                 </div>
             </div>
         </div>
     </div>
-
+    <script>
+        function deleteProduct(button) {
+            const productId = button.getAttribute('data-id');
+            if (confirm("Are you sure you want to delete this product?")) {
+                fetch(`/delete-product/${productId}`, {
+                    method: 'DELETE',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                })
+                .then(response => {
+                    if (response.ok) {
+                        document.getElementById(`product-card-${productId}`).remove();
+                    } else {
+                        alert("Product deleted.");
+                        location.reload();
+                    }
+                })
+                .catch(error => {
+                    console.error('Error:', error);
+                    alert("An error occurred while deleting the product.");
+                });
+            }
+        }
+    </script>
 </body>
 </html>
