--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     
     <title>Süskind</title>
 
-    <link rel="shortcut icon" href="static/img/logo/Süskind-title.png">
+    <link rel="shortcut icon" href="../static/img/logo/Süskind-title.png">
     <meta name='description' content='the website of perfume shop' />
 
     <meta property="og:title" content="Süskind" />
@@ -15,29 +15,29 @@
     <meta property="og:url" content="Süskind" />
     <meta property="og:image" content="static/img/main-banner.png" />
 
-    <link href="static/img/logo/Süskind.png" rel="apple-touch-icon" />
+    <link href="../static/img/logo/Süskind.png" rel="apple-touch-icon" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
     <link rel="stylesheet" href="static/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/static/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/all.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <script src="../static/js/jquery-3.5.1.min.js"></script>
+    <script src="../static/s/all.js"></script>
 </head>
 <body>
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="index.html" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="../templates/index.html" class="d-block">Süskind</a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="product.html">
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/product.html">
                             <i class="fas fa-tshirt mr-2"></i>
                             <p class="m-0">Product</p>
                         </a>
                     </li>
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="login.html">
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/login.html">
                             <i class="fas fa-user-alt mr-1"></i>
                             <p class="m-0">log in</p>
                         </a>
@@ -50,17 +50,17 @@
                 </ul>
                 <div class="header-mobile d-flex d-lg-none align-items-center">
                     <a class="cart-m position-relative" href="#">
-                        <img src="./static/img/icon/shopping-cart.svg" alt="shopping-cart">
+                        <img src="../static/img/icon/shopping-cart.svg" alt="shopping-cart">
                         <p class="cart-mark rounded-circle bg-primary text-white">3</p>
                     </a>
-                    <a class="ham" href="#"><img src="static/img/icon/bars.svg" alt="ham"></a>
+                    <a class="ham" href="#"><img src="../static/img/icon/bars.svg" alt="ham"></a>
                 </div>
             </nav>
         </div>
         <div class="container-fluid">
             <ul class="header_menu-m d-block d-lg-none w-100 p-0">
-                <li><a href="product.html" class="d-block text-white px-0 py-3">Product</a></li>
-                <li><a href="login.html" class="d-block text-white px-0 py-3">Log in</a></li>
+                <li><a href="../templates/product.html" class="d-block text-white px-0 py-3">Product</a></li>
+                <li><a href="../templates/login.html" class="d-block text-white px-0 py-3">Log in</a></li>
             </ul>
         </div>
     </header>
@@ -69,8 +69,8 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-8">
-                    <img src="static/img/login-pic-m.jpg" class="d-none d-md-block mb-80px" alt="product pic">
-                    <img src="static/img/login-pic-m.jpg" class="d-block d-md-none mb-4" alt="product pic">
+                    <img src="../templates/static/img/login-pic-m.jpg" class="d-none d-md-block mb-80px" alt="product pic">
+                    <img src="../templates/static/img/login-pic-m.jpg" class="d-block d-md-none mb-4" alt="product pic">
                 </div>
                 <div class="col-12 col-md-4">
                     <h2 class="font-weight-bold mb-3">Log in</h3>
@@ -87,7 +87,7 @@
                             <a href="#" class="text-primary">Forgot Password</a>
                             <div class="button-group-inner">
                                 <button type="button" class="btn btn-outline-primary mr-2">Register</button>
-                                <a href="member.html" class="btn btn-primary" role="button">Enter</a>
+                                <a href="../templates/member.html" class="btn btn-primary" role="button">Enter</a>
                             </div>
                         </div>
                     </form>
@@ -101,12 +101,12 @@
             <div class="container">
                 <div class="footer_menu_inner d-flex justify-content-between align-items-center">
                     <div class="copyright d-flex align-items-center">
-                        <img src="./static/img/logo/Süskind-white.png" alt="logo">
+                        <img src="../static/img/logo/Süskind-white.png" alt="logo">
                         <p class="text-white m-0">© 2020. All Rights Reserved.</p>
                     </div>
                     <nav class="d-none d-lg-block">
                         <ul class="d-flex m-0">
-                            <li><a href="product.html" class="text-white">Product</a></li>
+                            <li><a href="../templates/product.html" class="text-white">Product</a></li>
                             <li><a href="#" class="text-white">Blog</a></li>
                             <li><a href="#" class="text-white">Contact</a></li>
                         </ul>
