--- a/templates/order.html
+++ b/templates/order.html
@@ -15,32 +15,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="static/img/logo/Süskind-title.png">
-    <link href="static/img/logo/Süskind.png" rel="apple-touch-icon" />
+    <link rel="shortcut icon" href="../static/img/logo/Süskind-title.png">
+    <link href="../static/img/logo/Süskind.png" rel="apple-touch-icon" />
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="static/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/static/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="../static/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
     
     <!-- Scripts -->
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/all.js"></script>
+    <script src="../static/js/jquery-3.5.1.min.js"></script>
+    <script src="../static/js/all.js"></script>
 </head>
 <body>
     <!-- Header -->
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="index.html" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="../templates/index.html" class="d-block">Süskind</a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="product.html">
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/product.html">
                             <i class="fas fa-tshirt mr-2"></i>
                             <p class="m-0">Product</p>
                         </a>
                     </li>
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="member.html">
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/member.html">
                             <i class="fas fa-user-alt mr-1"></i>
                             <p class="m-0">My Page</p>
                         </a>
@@ -53,20 +53,20 @@
                 </ul>
                 <div class="header-mobile d-flex d-lg-none align-items-center">
                     <a class="cart-m position-relative" href="#">
-                        <img src="./static/img/icon/shopping-cart.svg" alt="shopping-cart">
+                        <img src="../static/img/icon/shopping-cart.svg" alt="shopping-cart">
                         <p class="cart-mark rounded-circle bg-primary text-white">3</p>
                     </a>
-                    <a class="ham" href="#"><img src="static/img/icon/bars.svg" alt="ham"></a>
+                    <a class="ham" href="#"><img src="../static/img/icon/bars.svg" alt="ham"></a>
                 </div>
             </nav>
         </div>
         <div class="container-fluid">
             <ul class="header_menu-m d-block d-lg-none w-100 p-0">
-                <li><a href="product.html" class="d-block text-white px-0 py-3">Product</a></li>
+                <li><a href="../templates/product.html" class="d-block text-white px-0 py-3">Product</a></li>
                 <li><a href="#" class="d-block text-white px-0 py-3">Wishlist</a></li>
                 <li><a href="#" class="d-block text-white px-0 py-3">Blog</a></li>
                 <li><a href="#" class="d-block text-white px-0 py-3">Contact</a></li>
-                <li><a href="member.html" class="d-block text-white px-0 py-3">My Page</a></li>
+                <li><a href="../templates/member.html" class="d-block text-white px-0 py-3">My Page</a></li>
             </ul>
         </div>        
     </header>
@@ -83,8 +83,8 @@
             <div class="row">
                 <!-- Left Column (Sidebar) -->
                 <div class="col-md-3 col-lg-2 d-none d-lg-block">
-                    <h6 class="mb-4"><a href="member.html" class="text-dark">Information Modification</a></h6>
-                    <h6 class="mb-4"><a href="order.html" class="text-dark border-primary border-bottom">Order Tracking</a></h6>
+                    <h6 class="mb-4"><a href="../templates/member.html" class="text-dark">Information Modification</a></h6>
+                    <h6 class="mb-4"><a href="../templates/order.html" class="text-dark border-primary border-bottom">Order Tracking</a></h6>
                 </div>
                 <!-- Right Column (Main Content) -->
                 <div class="col-12 col-lg-10">
