--- a/templates/product.html
+++ b/templates/product.html
@@ -7,7 +7,7 @@
 
     <title>Süskind</title>
 
-    <link rel="shortcut icon" href="static/img/logo/d’Perfume-title.ico">
+    <link rel="shortcut icon" href="../static/img/logo/d’Perfume-title.ico">
     <meta name='description' content='the website of perfume shop' />
 
     <meta property="og:title" content="Süskind" />
@@ -16,33 +16,33 @@
     <meta property="og:url" content="Süskind" />
     <meta property="og:image" content="static/img/main-banner.png" />
 
-    <link href="static/img/logo/d’Perfume.png" rel="apple-touch-icon" />
+    <link href="../static/img/logo/d’Perfume.png" rel="apple-touch-icon" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
     <link rel="stylesheet" href="static/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/static/css/all.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/all.js"></script>
+    <script src="../static/js/jquery-3.5.1.min.js"></script>
+    <script src="../static/js/all.js"></script>
 </head>
 
 <body>
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="index.html" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="../templates/index.html" class="d-block">Süskind</a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
                         <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3"
-                            href="product.html">
+                            href="../templates/product.html">
                             <i class="fas fa-tshirt mr-2"></i>
                             <p class="m-0">Product</p>
                         </a>
                     </li>
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="login.html">
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="../templates/login.html">
                             <i class="fas fa-user-alt mr-1"></i>
                             <p class="m-0">Log in</p>
                         </a>
@@ -66,9 +66,9 @@
     <div class="product_category bg-primary d-none d-lg-flex mb-80px">
         <div class="container">
             <ul class="d-flex m-0 p-0">
-                <li><a href="product-all.html" class="d-block text-white p-3">All</a></li>
-                <li><a href="product-women.html" class="d-block text-white p-3">Women</a></li>
-                <li><a href="product-men.html" class="d-block text-white p-3">Men</a></li>
+                <li><a href="../templates/product-all.html" class="d-block text-white p-3">All</a></li>
+                <li><a href="../templates/product-women.html" class="d-block text-white p-3">Women</a></li>
+                <li><a href="../templates/product-men.html" class="d-block text-white p-3">Men</a></li>
             </ul>
         </div>
     </div>
@@ -78,14 +78,14 @@
                 <!-- Produit 1 -->
                 <div class="col-6 col-md-3">
                     <div class="card border-0" data-product-id="1">
-                        <img class="card-img-top" src="static/img/product/product-1.png" alt="RUBY">
+                        <img class="card-img-top" src="../static/img/product/product-1.png" alt="RUBY">
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">RUBY</h3>
                             <p class="card-text text-center">Women</p>
                             <p class="text-center">$1,380 <del class="text-dark text-center">$1,580</del></p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
-                                    <button class="add-to-cart"><img src="static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
+                                    <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
                                 </li>
                             </ul>                            
                         </div>
@@ -95,14 +95,14 @@
                 <!-- Produit 2 -->
                 <div class="col-6 col-md-3">
                     <div class="card border-0" data-product-id="2">
-                        <img class="card-img-top" src="static/img/product/product-2.png" alt="SAPPHIRE">
+                        <img class="card-img-top" src="../static/img/product/product-2.png" alt="SAPPHIRE">
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">SAPPHIRE</h3>
                             <p class="card-text text-center">Women</p>
                             <p class="text-center">$1,380 <del class="text-dark text-center">$1,580</del></p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
-                                    <button class="add-to-cart"><img src="static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
+                                    <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
                                 </li>
                             </ul>
                         </div>
@@ -112,14 +112,14 @@
                 <!-- Produit 3 -->
                 <div class="col-6 col-md-3">
                     <div class="card border-0" data-product-id="3">
-                        <img class="card-img-top" src="static/img/product/product-3.png" alt="EMERALD">
+                        <img class="card-img-top" src="../static/img/product/product-3.png" alt="EMERALD">
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">EMERALD</h3>
                             <p class="card-text text-center">Women</p>
                             <p class="text-center">$1,380</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
-                                    <button class="add-to-cart"><img src="static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
+                                    <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
                                 </li>
                             </ul>
                         </div>
@@ -129,14 +129,14 @@
                 <!-- Produit 4 -->
                 <div class="col-6 col-md-3">
                     <div class="card border-0" data-product-id="4">
-                        <img class="card-img-top" src="static/img/product/product-4.png" alt="OPAL">
+                        <img class="card-img-top" src="../static/img/product/product-4.png" alt="OPAL">
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">OPAL</h3>
                             <p class="card-text text-center">Women</p>
                             <p class="text-center">$1,380</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
-                                    <button class="add-to-cart"><img src="static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
+                                    <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
                                 </li>
                             </ul>
                         </div>
@@ -152,14 +152,14 @@
                 <!-- Produit 5 -->
                 <div class="col-6 col-md-3">
                     <div class="card border-0" data-product-id="5">
-                        <img class="card-img-top" src="static/img/product/product-5.png" alt="EARTH">
+                        <img class="card-img-top" src="../static/img/product/product-5.png" alt="EARTH">
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">EARTH</h3>
                             <p class="card-text text-center">Men</p>
                             <p class="text-center">$1,380 <del class="text-dark text-center">$1,580</del></p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
-                                    <button class="add-to-cart"><img src="static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
+                                    <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
                                 </li>
                             </ul>                            
                         </div>
@@ -169,14 +169,14 @@
                 <!-- Produit 6 -->
                 <div class="col-6 col-md-3">
                     <div class="card border-0" data-product-id="6">
-                        <img class="card-img-top" src="static/img/product/product-6.png" alt="FIRE">
+                        <img class="card-img-top" src="../static/img/product/product-6.png" alt="FIRE">
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">FIRE</h3>
                             <p class="card-text text-center">Men</p>
                             <p class="text-center">$1,380 <del class="text-dark text-center">$1,580</del></p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
-                                    <button class="add-to-cart"><img src="static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
+                                    <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
                                 </li>
                             </ul>
                         </div>
@@ -186,14 +186,14 @@
                 <!-- Produit 7 -->
                 <div class="col-6 col-md-3">
                     <div class="card border-0" data-product-id="7">
-                        <img class="card-img-top" src="static/img/product/product-7.png" alt="AIR">
+                        <img class="card-img-top" src="../static/img/product/product-7.png" alt="AIR">
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">AIR</h3>
                             <p class="card-text text-center">Men</p>
                             <p class="text-center">$1,380</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
-                                    <button class="add-to-cart"><img src="static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
+                                    <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
                                 </li>
                             </ul>
                         </div>
@@ -203,14 +203,14 @@
                 <!-- Produit 8 -->
                 <div class="col-6 col-md-3">
                     <div class="card border-0" data-product-id="8">
-                        <img class="card-img-top" src="static/img/product/product-8.png" alt="WATER">
+                        <img class="card-img-top" src="../static/img/product/product-8.png" alt="WATER">
                         <div class="card-body pl-0">
                             <h3 class="h4 text-center">WATER</h3>
                             <p class="card-text text-center">Men</p>
                             <p class="text-center">$1,380</p>
                             <ul style="display: flex; justify-content: center; align-items: center; list-style-type: none; padding: 0; margin: 0;">
                                 <li style="margin: 0 10px;">
-                                    <button class="add-to-cart"><img src="static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
+                                    <button class="add-to-cart"><img src="../static/img/icon/shopping-cart-primary.svg" alt="cart"></button>
                                 </li>
                             </ul>
                         </div>
@@ -226,12 +226,12 @@
             <div class="container">
                 <div class="footer_menu_inner d-flex justify-content-between align-items-center">
                     <div class="copyright d-flex align-items-center">
-                        <img src="./static/img/logo/Süskind-white.png" alt="logo">
+                        <img src="../static/img/logo/Süskind-white.png" alt="logo">
                         <p class="text-white m-0">© 2020. All Rights Reserved.</p>
                     </div>
                     <nav class="d-none d-lg-block">
                         <ul class="d-flex m-0">
-                            <li><a href="product.html" class="text-white">Product</a></li>
+                            <li><a href="../templates/product.html" class="text-white">Product</a></li>
                             <li><a href="#" class="text-white">Blog</a></li>
                             <li><a href="#" class="text-white">Contact</a></li>
                         </ul>
@@ -248,6 +248,6 @@
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
         crossorigin="anonymous">
     </script>
-    <script src="js/cart.js"></script>
+    <script src="../static/js/cart.js"></script>
 </body>
 </html>
