--- a/templates/productInfo.html
+++ b/templates/productInfo.html
@@ -7,7 +7,7 @@
 
     <title>D'Perfume</title>
 
-    <link rel="shortcut icon" href="static/img/logo/d’Perfume-title.ico">
+    <link rel="shortcut icon" href="../static/img/logo/d’Perfume-title.ico">
     <meta name='description' content='the website of perfume shop' />
 
     <meta property="og:title" content="D'Perfume" />
@@ -16,32 +16,32 @@
     <meta property="og:url" content="D'Perfume" />
     <meta property="og:image" content="static/img/main-banner.png" />
 
-    <link href="static/img/logo/d’Perfume.png" rel="apple-touch-icon" />
+    <link href="../static/img/logo/d’Perfume.png" rel="apple-touch-icon" />
 
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
-    <link rel="stylesheet" href="static/css/all.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/static/css/all.min.css"
+    <link rel="stylesheet" href="../static/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
         integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog=="
         crossorigin="anonymous" />
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/all.js"></script>
+    <script src="../static/js/jquery-3.5.1.min.js"></script>
+    <script src="../static/js/all.js"></script>
 </head>
 
 <body>
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="index.html" class="d-block">D'Perfume</a></h1>
+                <h1 class="m-0"><a href="../templates/index.html" class="d-block">D'Perfume</a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="product.html">
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/product.html">
                             <i class="fas fa-tshirt mr-2"></i>
                             <p class="m-0">Product</p>
                         </a>
                     </li>
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="login.html">
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/login.html">
                             <i class="fas fa-user-alt mr-1"></i>
                             <p class="m-0">log in</p>
                         </a>
@@ -61,20 +61,20 @@
                 </ul>
                 <div class="header-mobile d-flex d-lg-none align-items-center">
                     <a class="cart-m position-relative" href="#">
-                        <img src="./static/img/icon/shopping-cart.svg" alt="shopping-cart">
+                        <img src="../static/img/icon/shopping-cart.svg" alt="shopping-cart">
                         <p class="cart-mark rounded-circle bg-primary text-white">3</p>
                     </a>
-                    <a class="ham" href="#"><img src="static/img/icon/bars.svg" alt="ham"></a>
+                    <a class="ham" href="#"><img src="../static/img/icon/bars.svg" alt="ham"></a>
                 </div>
             </nav>
         </div>
         <div class="container-fluid">
             <ul class="header_menu-m d-block d-lg-none w-100 p-0">
-                <li><a href="product.html" class="d-block text-white px-0 py-3">Product</a></li>
+                <li><a href="../templates/product.html" class="d-block text-white px-0 py-3">Product</a></li>
                 <li><a href="#" class="d-block text-white px-0 py-3">Wishlist</a></li>
                 <li><a href="#" class="d-block text-white px-0 py-3">Blog</a></li>
                 <li><a href="#" class="d-block text-white px-0 py-3">Contact</a></li>
-                <li><a href="login.html" class="d-block text-white px-0 py-3">Log in</a></li>
+                <li><a href="../templates/login.html" class="d-block text-white px-0 py-3">Log in</a></li>
             </ul>
         </div>
     </header>
@@ -95,16 +95,16 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-md-8 mb-0 mb-md-5">
-                    <img src="static/img/product-info/product-info-1.png" class="productInfo-mainPic" alt="product-pic">
+                    <img src="../static/img/product-info/product-info-1.png" class="productInfo-mainPic" alt="product-pic">
                     <div class="row d-none d-md-flex mb-4">
                         <div class="col-6">
-                            <img src="static/img/product-info/product-info-2.png" alt="product-pic">
+                            <img src="../static/img/product-info/product-info-2.png" alt="product-pic">
                         </div>
                         <div class="col-6">
-                            <img src="static/img/product-info/product-info-3.png" alt="product-pic">
+                            <img src="../static/img/product-info/product-info-3.png" alt="product-pic">
                         </div>
                     </div>
-                    <img src="static/img/product-info/product-info-1.png" class="d-none d-md-block" alt="product-pic">
+                    <img src="../static/img/product-info/product-info-1.png" class="d-none d-md-block" alt="product-pic">
                 </div>
                 <div class="col-12 col-md-4">
                     <h2 class="font-weight-bold">CHANEL N°5</h2>
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <a href="#" class="d-flex align-items-center " data-toggle="modal" data-target="#addFavorite">
-                        <img src="static/img/icon/heart-primary.svg" class="mr-1" alt="add to favorite">
+                        <img src="../static/img/icon/heart-primary.svg" class="mr-1" alt="add to favorite">
                         <p class="mb-0 text-dark">加入我的收藏</p>
                     </a>
                     <div class="productInfo-notice">
@@ -133,9 +133,9 @@
                         <p class="mb-40px">依《消費者保護法》的規定，於全站購物皆享有商品到貨【七日猶豫期】（含例假日）之權益。<br>若收到的商品有任何問題，可於猶豫期內申請退貨。</p>
                     </div>
                     <div class="d-block d-md-none">
-                        <img src="static/img/product-info/product-info-m-1.png" class="mb-3" alt="product pic">
-                        <img src="static/img/product-info/product-info-m-2.png" class="mb-3" alt="product pic">
-                        <img src="static/img/product-info/product-info-m-3.png" class="mb-40px" alt="product pic">
+                        <img src="../static/img/product-info/product-info-m-1.png" class="mb-3" alt="product pic">
+                        <img src="../static/img/product-info/product-info-m-2.png" class="mb-3" alt="product pic">
+                        <img src="../static/img/product-info/product-info-m-3.png" class="mb-40px" alt="product pic">
                     </div>
                 </div>
             </div>
@@ -165,12 +165,12 @@
             <div class="container">
                 <div class="footer_menu_inner d-flex justify-content-between align-items-center">
                     <div class="copyright d-flex align-items-center">
-                        <img src="./static/img/logo/d’Perfume-white.png" alt="logo">
+                        <img src="../static/img/logo/d’Perfume-white.png" alt="logo">
                         <p class="text-white m-0">© 2020. All Rights Reserved.</p>
                     </div>
                     <nav class="d-none d-lg-block">
                         <ul class="d-flex m-0">
-                            <li><a href="product.html" class="text-white">Product</a></li>
+                            <li><a href="../templates/product.html" class="text-white">Product</a></li>
                             <li><a href="#" class="text-white">Blog</a></li>
                             <li><a href="#" class="text-white">Contact</a></li>
                         </ul>
