--- a/templates/create-product.html
+++ b/templates/create-product.html
@@ -31,20 +31,9 @@
                 <h1 class="m-0"><a href="../templates/index.html" class="d-block">Süskind</a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/product.html">
-                            <i class="fas fa-tshirt mr-2"></i>
-                            <p class="m-0">Product</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/member.html">
+                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="create-product">
                             <i class="fas fa-user-alt mr-1"></i>
                             <p class="m-0">My Page</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="#">
-                            <i class="fas fa-shopping-cart mr-2"></i>
                         </a>
                     </li>
                 </ul>
@@ -59,18 +48,14 @@
         </div>
         <div class="container-fluid">
             <ul class="header_menu-m d-block d-lg-none w-100 p-0">
-                <li><a href="../templates/product.html" class="d-block text-white px-0 py-3">Product</a></li>
-                <li><a href="#" class="d-block text-white px-0 py-3">Wishlist</a></li>
-                <li><a href="#" class="d-block text-white px-0 py-3">Blog</a></li>
-                <li><a href="#" class="d-block text-white px-0 py-3">Contact</a></li>
-                <li><a href="../templates/member.html" class="d-block text-white px-0 py-3">Mypage</a></li>
+                <li><a href="create-product" class="d-block text-white px-0 py-3">My Page</a></li>
             </ul>
         </div>        
     </header>
     <!--Page Content Start-->
     <div class="product_category bg-primary d-none d-lg-flex mb-80px">
             <ul class="d-flex m-0 p-0">
-                <li><a class="d-block text-white p-3 text-center">Welcome back!</a></li>
+                <li><a class="d-block text-white p-3 text-center">Creator page</a></li>
             </ul>
     </div>
     <div class="member_content">
