--- a/templates/client.html
+++ b/templates/client.html
@@ -28,23 +28,30 @@
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="../templates/index.html" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="/" class="d-block">    <img src="../static/img/logo/Süskind.png" alt="Süskind Logo"></a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/product.html">
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3"
+                            href="product">
                             <i class="fas fa-tshirt mr-2"></i>
                             <p class="m-0">Product</p>
                         </a>
                     </li>
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/member.html">
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="login">
                             <i class="fas fa-user-alt mr-1"></i>
-                            <p class="m-0">My Page</p>
+                            <p class="m-0">Log in</p>
                         </a>
                     </li>
                     <li>
                         <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="#">
                             <i class="fas fa-shopping-cart mr-2"></i>
+                        </a>
+                    </li>
+                    <!-- Cart Icon -->
+                    <li class="cart-container">
+                        <a class="cart-icon" id="cart-icon">
+                            <span id="cart-count" class="cart-m-0 h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3">0</span>
                         </a>
                     </li>
                 </ul>
@@ -59,13 +66,11 @@
         </div>
         <div class="container-fluid">
             <ul class="header_menu-m d-block d-lg-none w-100 p-0">
-                <li><a href="../templates/product.html" class="d-block text-white px-0 py-3">Product</a></li>
-                <li><a href="#" class="d-block text-white px-0 py-3">Wishlist</a></li>
-                <li><a href="#" class="d-block text-white px-0 py-3">Blog</a></li>
-                <li><a href="#" class="d-block text-white px-0 py-3">Contact</a></li>
-                <li><a href="../templates/member.html" class="d-block text-white px-0 py-3">Mypage</a></li>
+                <li><a href="product" class="d-block text-white px-0 py-3">Product</a></li>
+                <li><a href="login" class="d-block text-white px-0 py-3">Log in</a></li>
             </ul>
-        </div>        
+        </div>
+        </div>
     </header>
     <!--Page Content Start-->
     <div class="product_category bg-primary d-none d-lg-flex mb-80px">
@@ -77,19 +82,6 @@
         <div class="container">
             <div class="row flex-lg-row-reverse">
                 <div class="col-12 col-lg-3 text-dark">
-                    <div class="row">
-                        <div class="col-4 col-lg-8 mb-3"><h4 class="h6 font-weight-light">Completed Orders</h4></div>
-                        <div class="col-2 col-lg-4"><h4 class="h6 font-weight-light">8</h4></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4 col-lg-8 mb-3"><h4 class="h6 font-weight-light">Membership Bonus</h4></div>
-                        <div class="col-2 col-lg-4"><h4 class="h6 font-weight-light">2680</h4></div>
-                    </div>
-                    <div class="row">
-                        <div class="col-4 col-lg-8"><h4 class="h6 font-weight-light">Exclusive Invitation Code</h4></div>
-                        <div class="col-2 col-lg-4"><h4 class="h6 font-weight-light">TK2075</h4></div>
-                    </div>
-                    <p class="text-lightGray mb-40px">New user can get 1000 bonus points by entering the invitation code.</p>
                 </div>
                 <div class="col-12 col-lg-6 col-lg-7">
                     <h3 class="h6 border-dark border-bottom pb-2">Personal Information Modification</h3>
@@ -139,8 +131,8 @@
                     </form>
                 </div>
                 <div class="col-md-3 col-lg-2 d-none d-lg-block">
-                    <h6 class="mb-4"><a href="../templates/member.html" class="text-dark border-primary border-bottom">Information Modification</a></h6>
-                    <h6 class="mb-4"><a href="../templates/order.html" class="text-dark">Order Tracking</a></h6>
+                    <h6 class="mb-4"><a href="client" class="text-dark border-primary border-bottom">Information Modification</a></h6>
+                    <h6 class="mb-4"><a href="order" class="text-dark">Order Tracking</a></h6>
                 </div>
             </div>
         </div>
