--- a/templates/index.html
+++ b/templates/index.html
@@ -32,31 +32,30 @@
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="../templates/index.html" class="d-block">    <img src="../static/img/logo/Süskind.png" alt="Süskind Logo"></a></h1>
+                <h1 class="m-0"><a href="/" class="d-block">    <img src="../static/img/logo/Süskind.png" alt="Süskind Logo"></a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3"
-                            href="../templates/product.html">
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3"
+                            href="product">
                             <i class="fas fa-tshirt mr-2"></i>
                             <p class="m-0">Product</p>
                         </a>
                     </li>
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/login.html">
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="login">
                             <i class="fas fa-user-alt mr-1"></i>
-                            <p class="m-0">log in</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="#">
-                            <i class="fas fa-heart mr-1"></i>
-                            <p class="m-0">Wishlist</p>
+                            <p class="m-0">Log in</p>
                         </a>
                     </li>
                     <li>
                         <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="#">
                             <i class="fas fa-shopping-cart mr-2"></i>
-                            <p class="m-0">Cart</p>
+                        </a>
+                    </li>
+                    <!-- Cart Icon -->
+                    <li class="cart-container">
+                        <a class="cart-icon" id="cart-icon">
+                            <span id="cart-count" class="cart-m-0 h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3">0</span>
                         </a>
                     </li>
                 </ul>
@@ -71,11 +70,8 @@
         </div>
         <div class="container-fluid">
             <ul class="header_menu-m d-block d-lg-none w-100 p-0">
-                <li><a href="../templates/product.html" class="d-block text-white px-0 py-3">Product</a></li>
-                <li><a href="#" class="d-block text-white px-0 py-3">Wishlist</a></li>
-                <li><a href="#" class="d-block text-white px-0 py-3">Blog</a></li>
-                <li><a href="#" class="d-block text-white px-0 py-3">Contact</a></li>
-                <li><a href="../templates/login.html" class="d-block text-white px-0 py-3">Log in</a></li>
+                <li><a href="product" class="d-block text-white px-0 py-3">Product</a></li>
+                <li><a href="login" class="d-block text-white px-0 py-3">Log in</a></li>
             </ul>
         </div>
         </div>
@@ -88,7 +84,7 @@
                     <h2 class="h1 font-weight-bold">Perfume your day</h2>
                     <p>A perfume is like a piece of clothing, a message, a way of presenting oneself a costume that
                         according to the person who wears it.</p>
-                    <a href="../templates/product.html" class="btn btn-outline-white w-100">Shop now</a>
+                    <a href="product" class="btn btn-outline-white w-100">Shop now</a>
                 </div>
             </div>
         </div>
@@ -268,9 +264,7 @@
                     </div>
                     <nav class="d-none d-lg-block">
                         <ul class="d-flex m-0">
-                            <li><a href="product.html" class="text-white">Product</a></li>
-                            <li><a href="#" class="text-white">Blog</a></li>
-                            <li><a href="#" class="text-white">Contact</a></li>
+                            <li><a href="product" class="text-white">Product</a></li>
                         </ul>
                     </nav>
                 </div>
