--- a/templates/login.html
+++ b/templates/login.html
@@ -28,23 +28,30 @@
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="../templates/index.html" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="/" class="d-block">    <img src="../static/img/logo/Süskind.png" alt="Süskind Logo"></a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/product.html">
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3"
+                            href="product">
                             <i class="fas fa-tshirt mr-2"></i>
                             <p class="m-0">Product</p>
                         </a>
                     </li>
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="../templates/login.html">
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="login">
                             <i class="fas fa-user-alt mr-1"></i>
-                            <p class="m-0">log in</p>
+                            <p class="m-0">Log in</p>
                         </a>
                     </li>
                     <li>
                         <a class="h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3" href="#">
                             <i class="fas fa-shopping-cart mr-2"></i>
+                        </a>
+                    </li>
+                    <!-- Cart Icon -->
+                    <li class="cart-container">
+                        <a class="cart-icon" id="cart-icon">
+                            <span id="cart-count" class="cart-m-0 h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3">0</span>
                         </a>
                     </li>
                 </ul>
@@ -59,9 +66,10 @@
         </div>
         <div class="container-fluid">
             <ul class="header_menu-m d-block d-lg-none w-100 p-0">
-                <li><a href="../templates/product.html" class="d-block text-white px-0 py-3">Product</a></li>
-                <li><a href="../templates/login.html" class="d-block text-white px-0 py-3">Log in</a></li>
+                <li><a href="product" class="d-block text-white px-0 py-3">Product</a></li>
+                <li><a href="login" class="d-block text-white px-0 py-3">Log in</a></li>
             </ul>
+        </div>
         </div>
     </header>
     <!--Page Content Start-->
@@ -74,23 +82,24 @@
                 </div>
                 <div class="col-12 col-md-4">
                     <h2 class="font-weight-bold mb-3">Log in</h3>
-                    <form>
-                        <div class="form-group">
-                            <label for="account">Username</label>
-                            <input type="text" class="form-control" id="account" placeholder="email@example.com">
-                        </div>
-                        <div class="form-group mb-4">
-                            <label for="pwd">Password</label>
-                            <input type="text" class="form-control" id="pwd" placeholder="Password">
-                        </div>
-                        <div class="button-group d-flex justify-content-between align-items-center">
-                            <a href="#" class="text-primary">Forgot Password</a>
-                            <div class="button-group-inner">
-                                <button type="button" class="btn btn-outline-primary mr-2">Register</button>
-                                <a href="../templates/member.html" class="btn btn-primary" role="button">Enter</a>
+                        <form action="/login" method="POST">
+                            <div class="form-group">
+                                <label for="account">Username</label>
+                                <input type="text" class="form-control" id="account" name="email" placeholder="email@example.com">
                             </div>
-                        </div>
-                    </form>
+                            <div class="form-group mb-4">
+                                <label for="pwd">Password</label>
+                                <input type="password" class="form-control" id="pwd" name="password" placeholder="Password">
+                            </div>
+                            <div class="button-group d-flex justify-content-between align-items-center">
+                                <a href="#" class="text-primary">Forgot Password</a>
+                                <div class="button-group-inner">
+                                    <button type="button" class="btn btn-outline-primary mr-2">Register</button>
+                                    <button type="submit" class="btn btn-primary">Enter</button>
+                                </div>
+                            </div>
+                        </form>
+                        
                 </div>
             </div>
         </div>
