--- a/templates/product.html
+++ b/templates/product.html
@@ -32,17 +32,17 @@
     <header class="position-relative">
         <div class="container">
             <nav class="d-flex justify-content-between align-items-center mb-40px mb-md-0">
-                <h1 class="m-0"><a href="../templates/index.html" class="d-block">Süskind</a></h1>
+                <h1 class="m-0"><a href="/" class="d-block">    <img src="../static/img/logo/Süskind.png" alt="Süskind Logo"></a></h1>
                 <ul class="header_menu d-none d-lg-flex justify-content-between m-0">
                     <li>
                         <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3"
-                            href="../templates/product.html">
+                            href="product">
                             <i class="fas fa-tshirt mr-2"></i>
                             <p class="m-0">Product</p>
                         </a>
                     </li>
                     <li>
-                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="../templates/login.html">
+                        <a class="h5 d-flex align-items-center text-dark text-center font-weight-light mb-0 p-3" href="login">
                             <i class="fas fa-user-alt mr-1"></i>
                             <p class="m-0">Log in</p>
                         </a>
@@ -57,18 +57,32 @@
                         <a class="cart-icon" id="cart-icon">
                             <span id="cart-count" class="cart-m-0 h5 d-flex align-items-center text-dark font-weight-light mb-0 p-3">0</span>
                         </a>
-                    </li>                   
+                    </li>
                 </ul>
+                <div class="header-mobile d-flex d-lg-none align-items-center">
+                    <a class="cart-m position-relative" href="#">
+                        <img src="../static/img/icon/shopping-cart.svg" alt="shopping-cart">
+                        <p class="cart-mark rounded-circle bg-primary text-white">3</p>
+                    </a>
+                    <a class="ham" href="#"><img src="../static/img/icon/bars.svg" alt="ham"></a>
+                </div>
             </nav>
+        </div>
+        <div class="container-fluid">
+            <ul class="header_menu-m d-block d-lg-none w-100 p-0">
+                <li><a href="product" class="d-block text-white px-0 py-3">Product</a></li>
+                <li><a href="login" class="d-block text-white px-0 py-3">Log in</a></li>
+            </ul>
+        </div>
         </div>
     </header>
     <!--Page Content Start-->
     <div class="product_category bg-primary d-none d-lg-flex mb-80px">
         <div class="container">
             <ul class="d-flex m-0 p-0">
-                <li><a href="../templates/product-all.html" class="d-block text-white p-3">All</a></li>
-                <li><a href="../templates/product-women.html" class="d-block text-white p-3">Women</a></li>
-                <li><a href="../templates/product-men.html" class="d-block text-white p-3">Men</a></li>
+                <li><a href="product-all" class="d-block text-white p-3">All</a></li>
+                <li><a href="product-women" class="d-block text-white p-3">Women</a></li>
+                <li><a href="product-men" class="d-block text-white p-3">Men</a></li>
             </ul>
         </div>
     </div>
@@ -231,7 +245,7 @@
                     </div>
                     <nav class="d-none d-lg-block">
                         <ul class="d-flex m-0">
-                            <li><a href="../templates/product.html" class="text-white">Product</a></li>
+                            <li><a href="product" class="text-white">Product</a></li>
                             <li><a href="#" class="text-white">Blog</a></li>
                             <li><a href="#" class="text-white">Contact</a></li>
                         </ul>
