--- a/templates/create-project.html
+++ b/templates/create-project.html
@@ -92,8 +92,8 @@
                     </div>
                 </div>                
                 <div class="col-md-3 col-lg-2 d-none d-lg-block">
-                    <h6 class="mb-4"><a href="chief-product" class="text-dark border-primary border-bottom">Projects</a></h6>
-                    <h6 class="mb-4"><a href="create-project" class="text-dark">Create a project</a></h6>
+                    <h6 class="mb-4"><a href="chief-product" class="text-dark">Projects</a></h6>
+                    <h6 class="mb-4"><a href="create-project" class="text-dark border-primary border-bottom">Create a project</a></h6>
                     <h6 class="mb-4"><a href="cp-products" class="text-dark">Existing products</a></h6>
                     <h6 class="mb-4"><a href="cp-status" class="text-dark">Production status</a></h6>
                     <h6 class="mb-4"><a href="cp-stock" class="text-dark">Inventory</a></h6>
