--- a/templates/order.html
+++ b/templates/order.html
@@ -102,82 +102,36 @@
                             <p>Date: 2024-12-07</p>
                             <p>Products:</p>
                             <ul>
-                                <li>Opal (Parfum Femme) - 115$</li>
-                                <li>Air (Parfum Homme) - 85$</li>
+                                <li>Opal - 115$</li>
+                                <li>Air - 85$</li>
                             </ul>
-                            <p>Status: Processing</p>
-                            <p>Estimated Delivery Date: 2024-12-12</p>
+                            <p>Status: processing</p>
+                            <p>Email client: john.doe@example.com</p>
                         </div>
 
-                        <!-- Order 2 -->
-                        <div class="order mb-3 p-3 border rounded">
-                            <h4 class="h6">Order No: 12349</h4>
-                            <p>Date: 2024-12-08</p>
-                            <p>Products:</p>
-                            <ul>
-                                <li>Ruby (Parfum Femme) - 115$</li>
-                                <li>Water (Parfum Homme) - 85$</li>
-                            </ul>
-                            <p>Status: Shipped</p>
-                            <p>Estimated Delivery Date: 2024-12-13</p>
-                        </div>
-
-                        <!-- Order 3 -->
-                        <div class="order mb-3 p-3 border rounded">
-                            <h4 class="h6">Order No: 12350</h4>
-                            <p>Date: 2024-12-09</p>
-                            <p>Products:</p>
-                            <ul>
-                                <li>Sapphire (Parfum Femme) - 115$</li>
-                                <li>Earth (Parfum Homme) - 85$</li>
-                            </ul>
-                            <p>Status: Out for Delivery</p>
-                            <p>Estimated Delivery Date: 2024-12-14</p>
-                        </div>
-                    </div>
+                        <!-- Order nb x -->
 
                     <!-- Order History Section -->
                     <h3 class="h6 border-dark border-bottom pb-2">Order History</h3>
                     <div id="orderHistory" class="text-dark">
                         <!-- Order History 1 -->
                         <div class="order mb-3 p-3 border rounded">
-                            <h4 class="h6">Commande n°12345</h4>
+                            <h4 class="h6">Order No: 12345</h4>
                             <p>Date : 2024-12-01</p>
-                            <p>Produits :</p>
+                            <p>Produts :</p>
                             <ul>
-                                <li>Ruby (Parfum Femme) - 115$</li>
-                                <li>Fire (Parfum Homme) - 85$</li>
+                                <li>Ruby - 115$</li>
+                                <li>Fire - 85$</li>
                             </ul>
-                            <p>Statut : Livrée</p>
-                            <p>Date de livraison estimée : 2024-12-05</p>
+                            <p>Status : delivered</p>
+                            <p>Email client: ella.lewis@example.com</p>
                         </div>
 
-                        <!-- Order History 2 -->
-                        <div class="order mb-3 p-3 border rounded">
-                            <h4 class="h6">Commande n°12346</h4>
-                            <p>Date : 2024-11-28</p>
-                            <p>Produits :</p>
-                            <ul>
-                                <li>Sapphire (Parfum Femme) - 115$</li>
-                                <li>Water (Parfum Homme) - 85$</li>
-                            </ul>
-                            <p>Statut : En cours de livraison</p>
-                            <p>Date de livraison estimée : 2024-12-03</p>
-                        </div>
-
-                        <!-- Order History 3 -->
-                        <div class="order mb-3 p-3 border rounded">
-                            <h4 class="h6">Commande n°12347</h4>
-                            <p>Date : 2024-11-26</p>
-                            <p>Produits :</p>
-                            <ul>
-                                <li>Emerald (Parfum Femme) - 115$</li>
-                                <li>Earth (Parfum Homme) - 85$</li>
-                            </ul>
-                            <p>Statut : Annulée</p>
-                            <p>Date de livraison estimée : N/A</p>
-                        </div>
+                        <!-- Order History nb x -->
+                        
                     </div>
                 </div>
+            </div>
+        </div>
 </body>
 </html>
