--- a/templates/order.html
+++ b/templates/order.html
@@ -124,7 +124,7 @@
                                 <li>Fire - 85$</li>
                             </ul>
                             <p>Status : delivered</p>
-                            <p>Email client: ella.lewis@example.com</p>
+                            <p>Email client: john.doe@example.com</p>
                         </div>
 
                         <!-- Order History nb x -->
